<resources>
    <string name="app_name">bitfitp2</string>
    <string name="meal_type">Meal Type</string>
    <string name="calories_consumed">Calories Consumed</string>
    <string name="add_entry">Add Entry</string>
    <string name="nutrition">Nutrition</string>
    <string name="dashboard">Dashboard</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min_calories">Min Calories:</string>
    <string name="max_calories">Max Calories:</string>
    <string name="average_calories">Average Calories:</string>
</resources>