<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewAvgCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/average_calories"
        android:textSize="16sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textViewMaxCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_calories"
        android:textSize="16sp"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/textViewMinCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min_calories"
        android:textSize="16sp"
        android:padding="10dp"/>

</LinearLayout>